// 말씀준비 (MalssumJunbi) Database Schema
// dbdiagram.io 버전
// https://dbdiagram.io 에서 붙여넣기 후 사용

Table church {
  id              bigint        [pk, increment]
  name            varchar(100)  [not null, note: '교회명']
  denomination    varchar(50)   [not null, default: 'PRESBYTERIAN', note: 'PRESBYTERIAN / METHODIST / BAPTIST / etc.']
  admin_email     varchar(200)  [not null, unique]
  password_hash   varchar(255)  [not null]
  created_at      datetime      [not null, default: `now()`]
  updated_at      datetime      [not null, default: `now()`]
}

Table church_member {
  id              bigint        [pk, increment]
  church_id       bigint        [not null, ref: > church.id]
  email           varchar(200)  [not null, unique]
  password_hash   varchar(255)  [not null]
  name            varchar(50)   [not null]
  role            varchar(20)   [not null, default: 'MEMBER', note: 'ADMIN / MEMBER']
  created_at      datetime      [not null, default: `now()`]
}

Table worship_template {
  id              bigint        [pk, increment]
  church_id       bigint        [not null, ref: > church.id]
  name            varchar(100)  [not null, note: '예: 주일예배 / 수요예배 / 특별예배']
  description     varchar(255)
  is_default      boolean       [not null, default: false]
  created_at      datetime      [not null, default: `now()`]
  updated_at      datetime      [not null, default: `now()`]
}

Table template_item {
  id              bigint        [pk, increment]
  template_id     bigint        [not null, ref: > worship_template.id]
  type            varchar(30)   [not null, note: 'HYMN / BIBLE / RESPONSIVE_READING / PRAYER / SERMON / CUSTOM']
  seq             int           [not null, note: '순서 (1부터)']
  label           varchar(100)  [note: '표시 이름 예: 찬양1 / 대표기도']
  default_mode    varchar(10)   [not null, default: 'AUTO', note: 'AUTO / FILE']
}

Table worship {
  id              bigint        [pk, increment]
  church_id       bigint        [not null, ref: > church.id]
  template_id     bigint        [ref: > worship_template.id, note: 'NULL 허용 — 템플릿 삭제 시 기록 보존']
  worship_date    date          [not null]
  title           varchar(200)
  status          varchar(20)   [not null, default: 'DRAFT', note: 'DRAFT / COMPLETED']
  created_by      bigint        [ref: > church_member.id]
  created_at      datetime      [not null, default: `now()`]
  updated_at      datetime      [not null, default: `now()`]
}

Table worship_item {
  id                  bigint        [pk, increment]
  worship_id          bigint        [not null, ref: > worship.id]
  type                varchar(30)   [not null, note: 'HYMN / BIBLE / RESPONSIVE_READING / PRAYER / SERMON / CUSTOM']
  seq                 int           [not null, note: '예배 내 순서']
  label               varchar(100)
  mode                varchar(10)   [not null, default: 'AUTO', note: 'AUTO: content JSON으로 생성 / FILE: 첨부파일 병합']
  content             json          [note: 'AUTO 모드 입력값 (아래 참고)']
  file_storage_key    varchar(500)  [note: 'FILE 모드 시 스토리지 경로']
  created_at          datetime      [not null, default: `now()`]
  updated_at          datetime      [not null, default: `now()`]

  note: '''
  content JSON 구조 (type별)
  HYMN:               { "hymnNumber": 304, "title": "그 크신 하나님의 사랑", "verses": [1,2,4] }
  BIBLE:              { "book": "요한복음", "chapter": 3, "verseStart": 16, "verseEnd": 16 }
  RESPONSIVE_READING: { "number": 14, "title": "감사" }
  PRAYER:             { "role": "대표기도", "leader": "홍길동 장로" }
  SERMON:             { "title": "하나님의 사랑", "bibleRef": "요한복음 3:16", "preacher": "홍길동 목사" }
  CUSTOM:             { "text": "자유 형식" }
  '''
}

Table ai_suggestion {
  id                  bigint        [pk, increment]
  worship_item_id     bigint        [not null, ref: > worship_item.id]
  church_id           bigint        [not null, ref: > church.id, note: '크레딧 차감 추적용']
  bible_ref           varchar(100)  [not null, note: '예: 요한복음 3:16']
  result              json          [not null]
  tokens_used         int           [not null, default: 0]
  model               varchar(50)   [note: '사용된 AI 모델명']
  created_at          datetime      [not null, default: `now()`]

  note: '''
  result JSON 구조
  {
    "theme": "하나님의 사랑과 구원",
    "outline": {
      "intro": "...",
      "points": ["사랑의 크기", "사랑의 방식", "사랑의 목적"],
      "conclusion": "..."
    },
    "subtitles": ["값없이 주신 사랑", "독생자의 의미", "멸망에서 영생으로"],
    "hymnNumbers": [304, 405, 191, 280, 93],
    "relatedVerses": ["롬 5:8", "요일 4:9-10", "엡 2:8-9"]
  }
  '''
}

Table credit {
  id              bigint        [pk, increment]
  church_id       bigint        [not null, unique, ref: > church.id]
  plan_type       varchar(20)   [not null, default: 'FREE', note: 'FREE / TICKET / SUBSCRIPTION']
  remaining       int           [not null, default: 10, note: '남은 크레딧']
  total_used      int           [not null, default: 0, note: '누적 사용량']
  expires_at      datetime      [note: '구독 만료일']
  updated_at      datetime      [not null, default: `now()`]
}

Table uploaded_file {
  id                  bigint        [pk, increment]
  church_id           bigint        [not null, ref: > church.id]
  worship_item_id     bigint        [ref: > worship_item.id, note: 'NULL 허용 — 미사용 파일']
  original_name       varchar(255)  [not null]
  storage_key         varchar(500)  [not null, unique, note: '스토리지 경로 (S3 / Railway 볼륨)']
  file_size           bigint        [not null, note: 'bytes']
  mime_type           varchar(100)
  created_at          datetime      [not null, default: `now()`]
}
